--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,8 @@
-runtime: php82
+runtime: php
 env: flex
 
 runtime_config:
+  operating_system: "ubuntu22"
   document_root: public
 
 # Ensure we skip ".env", which is only for local development
