Adding configuration for Google Cloud Platform (GCP).

--- a/ci/cloudbuild.yaml
+++ b/ci/cloudbuild.yaml
@@ -7,4 +7,11 @@ steps:
         gcloud config set app/cloud_build_timeout 3600 \
         && gcloud app deploy -q --promote -v=$BUILD_ID \
         --project=$PROJECT_ID
+  - name: 'composer-upgrade'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        composer self-update
+
 timeout: '3600s'
