Troubleshooting cloud build deployment.  Work in progress.

--- a/ci/cloudbuild.yaml
+++ b/ci/cloudbuild.yaml
@@ -1,4 +1,6 @@
 steps:
+  - name: 'step1'
+    args: ['echo', 'step #1']
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: 'bash'
     args:
@@ -7,11 +9,15 @@ steps:
         gcloud config set app/cloud_build_timeout 3600 \
         && gcloud app deploy -q --promote -v=$BUILD_ID \
         --project=$PROJECT_ID
+  - name: 'step2'
+    args: ['echo', 'step #2']
   - name: 'composer-upgrade'
     entrypoint: 'bash'
     args:
       - '-c'
       - |
         composer self-update
+  - name: 'step3'
+    args: ['echo', 'step #3']
 
 timeout: '3600s'
