--- a/app.yaml
+++ b/app.yaml
@@ -5,6 +5,9 @@ runtime_config:
   operating_system: "ubuntu22"
   document_root: public
 
+build_env_variables:
+  GOOGLE_COMPOSER_VERSION: 2.2.1
+
 # Ensure we skip ".env", which is only for local development
 skip_files:
   - .env
