--- a/app.yaml
+++ b/app.yaml
@@ -8,6 +8,8 @@ runtime_config:
 build_env_variables:
   GOOGLE_COMPOSER_VERSION: 2.2.1
 
+service: api
+
 # Ensure we skip ".env", which is only for local development
 skip_files:
   - .env
