--- a/app.yaml
+++ b/app.yaml
@@ -26,11 +26,11 @@ resources:
 env_variables:
   # follow the part of the tutorial on setting up your SQL database
   DB_CONNECTION: mysql
-  DB_HOST: localhost
+  DB_HOST: 172.19.16.3
   DB_DATABASE: butler1970dotcom
   DB_USERNAME: root
   DB_PASSWORD: "@~vf6vm<rt^?1usp"
-  DB_SOCKET: /cloudsql/savvy-temple-393819:us-central1:butler1970dotcom
+  #DB_SOCKET: /cloudsql/savvy-temple-393819:us-central1:butler1970dotcom
 
   # Put production environment variables here.
   APP_DEBUG: true
