--- a/app.yaml
+++ b/app.yaml
@@ -24,6 +24,8 @@ resources:
   disk_size_gb: 100
 
 env_variables:
+  FINDIP_TOKEN: "a4b542192dd34a8682ec1c71f942b01a"
+
   # follow the part of the tutorial on setting up your SQL database
   DB_CONNECTION: mysql
   DB_HOST: 172.19.16.3
