Configuring for standard app engine environment.

--- a/app.yaml
+++ b/app.yaml
@@ -14,9 +14,9 @@ service: api
 skip_files:
   - .env
 
-automatic_scaling:
-  min_num_instances: 1
-  max_num_instances: 1
+#automatic_scaling:
+#  min_num_instances: 1
+#  max_num_instances: 1
 
 #resources:
 #  cpu: 2
