--- a/app.yaml
+++ b/app.yaml
@@ -11,8 +11,8 @@ build_env_variables:
 service: api
 
 # Ensure we skip ".env", which is only for local development
-skip_files:
-  - .env
+#skip_files:
+#  - .env
 
 #automatic_scaling:
 #  min_num_instances: 1
